Added: tasks, create and get task endpoint
